# lengthyurl

./: README.md
lengthy-url/: Cargo.toml
lengthy-url/src/: main.rs
lengthy-url/static/: main.css  main.js
lengthy-url/templates/: index.html.tera
