[package]
name = "lengthyurl"
version = "0.1.0"
authors = ["malcolm <malcolm.balch@gonift.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
postgres = "0.15"
rand = "0.6.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "1.7.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates", "serve", "json"]
